edu-user/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-edu-user-service
  namespace: default
spec:
  selector:
    app: k8s-edu-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080                        # deployment에서 설정한 컨테이너 포트 매핑
