edu-user/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-user-deployment
  namespace: edu-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edu-user
  template:
    metadata:
      labels:
        app: edu-user
    spec:
      containers:
      - name: edu-user
        image: choms0209/k8s-edu:v0.0.8
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        #resources:
          #requests:
            #cpu: "1"
            #memory: "2Gi"
          #limits:
            #cpu: "1"
            #memory: "2Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      imagePullSecrets:
        - name: edu-user-secret
        
---
apiVersion: v1
kind: Service
metadata:
  name: edu-user-service
  namespace: edu-user
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: edu-user

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-user-ingress
  namespace: edu-user
spec:
  ingressClassName: nginx
  rules:
    - host: "edu-user.211.254.212.192.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edu-user-service
                port:
                  number: 80
